refactor: update mailer
Squashed commit of the following:

commit b9f341451c1016cd5d52fe1edb6172dbb250ee8b
Author: Harivansh <leharivansh@gmail.com>
Date:   Mon Dec 16 06:29:19 2024 +0400

    doc: add mail todos

commit b536cfd659bbdb6a2bde7d9b171e0522857f7294
Author: Harivansh <leharivansh@gmail.com>
Date:   Mon Dec 16 06:06:07 2024 +0400

    feat: add additional mail methods

commit c725270915da86630f4febae3f2047f0d0ec9696
Author: Harivansh <leharivansh@gmail.com>
Date:   Mon Dec 16 05:37:22 2024 +0400

    fix: update password-reset link

commit 3f8b372e30d0db37c17d89601dab2adfc65b091c
Author: Harivansh <leharivansh@gmail.com>
Date:   Mon Dec 16 05:35:31 2024 +0400

    fix: update mail template

--- a/apps/client/src/_password-reset/template/forgot-password.mjml.mustache
+++ b/apps/client/src/_password-reset/template/forgot-password.mjml.mustache
@@ -1,6 +1,14 @@
 <mjml>
+  <mj-head>
+    <mj-font name="Open Sans" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" />
+
+    <mj-attributes>
+      <mj-text font-family="Open Sans" />
+    </mj-attributes>
+  </mj-head>
+
   <mj-body>
-    <mj-section background-color="#fafafa">
+    <mj-section background-color="#f8fafc">
       <mj-column>
         <mj-text align="center" font-size="16px" color="black">{{ applicationName }}</mj-text>
       </mj-column>
@@ -8,17 +16,27 @@
 
     <mj-section>
       <mj-column>
-        <mj-text>Hi {{ user.firstName }},</mj-text>
-        <mj-text>
+        <mj-spacer height="12px" />
+
+        <mj-text align="center" font-size="16px">Hi {{ user.firstName }},</mj-text>
+
+        <mj-spacer height="12px" />
+
+        <mj-text align="center">
           Your password-reset link is:
         </mj-text>
-        <mj-text>
+
+        <mj-spacer height="12px" />
+
+        <mj-text align="center">
           <a href="{{ passwordResetLink }}" data-test-id="password-reset-link">{{ passwordResetLink }}</mj-text>
         </mj-text>
+
+        <mj-spacer height="12px" />
       </mj-column>
     </mj-section>
 
-    <mj-section background-color="#fafafa">
+    <mj-section background-color="#f8fafc">
       <mj-column>
         <mj-text align="center" font-size="10px" color="black">&copy; {{ applicationName }} {{ currentYear }}</mj-text>
       </mj-column>
